# memsafe

./: Cargo.toml  LICENSE  README.MD
.github/workflows/: CI-CD.yml  bump-version.yml  ci.yml  enforce-label-on-pr.yml  feed-bumping-strategy-into-desc.yaml  release.yml
benches/: memsafe_bench.rs
src/: cell.rs  error.rs  gaurd.rs  lib.rs  mem_safe.rs  ptr_ops.rs  raw_ptr.rs  secret.rs  type_state.rs
src/ffi/: mod.rs  unix.rs  win.rs
tests/: from_string.rs  from_string_type_state.rs  gaurd.rs  memory_tests.rs  performance.rs  readme.rs  secret.rs  security.rs  type_state.rs
