[package]
name = "memsafe"
version = "0.1.8"

edition = "2021"
description = "A cross-platform Rust library for securely wrapping data in memory"
authors = ["po0uyan <info@pouyan.me>", "mortezashojaei mshojaei179@gmail.com"]
license = "MIT"
repository = "https://github.com/po0uyan/memsafe"
keywords = ["memory", "security", "lock", "cross-platform"]
categories = ["memory-management","os", "cryptography"]

[dependencies]
libc = { version = "0.2", optional = true }
winapi = { version = "0.3", features = ["memoryapi", "winnt"], optional = true }

[features]
default = ["unix"]
unix = ["libc"]
windows = ["winapi"]