[package]
name = "memsafe"
version = "0.3.0"
edition = "2021"
description = "A Secure cross-platform Rust library for securely wrapping data in memory"
authors = [
    "po0uyan <info@pouyan.me>",
    "mortezashojaei <mshojaei179@gmail.com>",
    "shshemi <shshemi@gmail.com>",
]
license = "MIT"
repository = "https://github.com/po0uyan/memsafe"
keywords = ["memory", "security", "lock", "cross-platform"]
categories = ["memory-management", "os", "cryptography"]
readme = "README.MD"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "winnt"] }

[dependencies]
