[package]
name = "memsafe"
version = "1.0.2"
edition = "2024"
rust-version = "1.85"
description = "A Secure cross-platform Rust library for securely wrapping data in memory"
authors = [
    "shshemi <shshemi@gmail.com>",
    "po0uyan <info@pouyan.me>",
    "mortezashojaei <mshojaei179@gmail.com>",
]
license = "MIT"
repository = "https://github.com/po0uyan/memsafe"
keywords = ["memory", "security", "lock", "cross-platform"]
categories = ["memory-management", "os", "cryptography"]
readme = "README.MD"

[features]
type-state = []

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "winnt"] }

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "memsafe_bench"
harness = false
